# rattler

./: Cargo.toml  pixi.toml  typos.toml
.github/workflows/: e2e-rattler-fs-tests.yml  release-python.yml
crates/rattler/: CHANGELOG.md
crates/rattler-bin/: Cargo.toml  pixi.toml
crates/rattler-bin/src/: main.rs
crates/rattler-bin/src/commands/: mod.rs  mount.rs
crates/rattler/src/install/: link.rs  mod.rs
crates/rattler_cache/: CHANGELOG.md  Cargo.toml
crates/rattler_cache/src/: lib.rs
crates/rattler_cache/src/package_cache/: cache_lock.rs  mod.rs
crates/rattler_conda_types/: CHANGELOG.md  Cargo.toml
crates/rattler_conda_types/src/package/: mod.rs  paths.rs
crates/rattler_conda_types/src/package/snapshots/: rattler_conda_types__package__paths__test__deserialize_paths_json_with_offsets.snap
crates/rattler_fs/: Cargo.toml  build.rs
crates/rattler_fs/src/: codesign.rs  fuse_adapter.rs  fuse_directory.rs  lib.rs  main.rs  metadata_tree.rs  nfs_adapter.rs  overlay.rs  overlay_fs.rs  package_source.rs  prefix_replacement.rs  projfs_adapter.rs  vfs_ops.rs  virtual_fs.rs
crates/rattler_fs/src/overlay_fs/: inode.rs
crates/rattler_fs/tests/: install_vs_mount_parity.rs
crates/rattler_index/: CHANGELOG.md
crates/rattler_lock/: CHANGELOG.md
crates/rattler_lock/src/: lib.rs
crates/rattler_menuinst/: CHANGELOG.md
crates/rattler_package_streaming/: CHANGELOG.md
crates/rattler_repodata_gateway/: CHANGELOG.md
crates/rattler_shell/: CHANGELOG.md
crates/rattler_solve/: CHANGELOG.md
crates/rattler_solve/src/: lib.rs
crates/rattler_solve/src/resolvo/: mod.rs
crates/rattler_solve/tests/backends/: main.rs
crates/rattler_virtual_packages/: CHANGELOG.md
py-rattler/: Cargo.toml
py-rattler/rattler/: __init__.py
py-rattler/rattler/package_cache/: __init__.py  package_cache.py
py-rattler/src/: error.rs  lib.rs  package_cache.rs  paths_json.rs
py-rattler/tests/unit/: test_package_cache.py
scripts/e2e/: rattler-fs-mount.nu
test-data/rattler-fs/: pixi.toml
