[package]
name = "rattler_fs"
version = "0.1.0"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
fs4 = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
memchr = { workspace = true }
memmap2 = { workspace = true }
rattler = { workspace = true, default-features = false }
reflink-copy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
rattler_cache = { workspace = true, default-features = false }
rattler_conda_types = { workspace = true }
rattler_lock = { workspace = true }
rattler_networking = { workspace = true, default-features = false }
reqwest-middleware = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util", "signal"] }
tracing = { workspace = true }

# NFS transport (optional)
nfs3_server = { version = "0.10", optional = true }
nfs3_types = { version = "0.5", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Storage_ProjectedFileSystem", "Win32_Foundation", "Win32_System_LibraryLoader"] }

# FUSE always-on for Linux. Uses fuser's pure-rust mount path, which does a
# direct mount(2) when privileged (CAP_SYS_ADMIN) and otherwise exec's the
# host's setuid /usr/bin/fusermount3 for unprivileged mounts.
[target.'cfg(target_os = "linux")'.dependencies]
fuser = { workspace = true }

# macOS-only dependencies:
# - fuser is opt-in (requires macFUSE installed system-wide)
# - sha2-asm accelerates the codesign module, which rehashes every page of a
#   Mach-O binary on every mount (hot path). Linux and Windows only use sha2
#   for compute_env_hash, which runs once per mount.
[target.'cfg(target_os = "macos")'.dependencies]
fuser = { workspace = true, optional = true }
sha2 = { workspace = true, features = ["asm"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["nfs"]
nfs = ["dep:nfs3_server", "dep:nfs3_types"]
fuse = ["dep:fuser"]  # only meaningful on macOS
native-tls = [
  "rattler/native-tls",
  "rattler_cache/native-tls",
  "rattler_networking/native-tls",
]
rustls-tls = [
  "rattler/rustls-tls",
  "rattler_cache/rustls-tls",
  "rattler_networking/rustls-tls",
]
